--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,15 @@
   color: #61dafb;
 }
 
+button {
+  padding: 0.5rem 1rem;
+  background: white;
+  color: black;
+  border-radius: 0.5rem;
+  font-weight: 500;
+  border: 1px solid #333333;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
